# rules_k8s

./: BUILD  README.md  WORKSPACE  go.mod  go.sum
k8s/: BUILD  k8s.bzl  k8s_go_deps.bzl  object.bzl  objects.bzl
k8s/go/pkg/resolver/: BUILD.bazel  resolver.go  stamper.go  utils.go
toolchains/kubectl/: kubectl_configure.bzl
