load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "resolver",
    srcs = [
        "resolver.go",
        "stamper.go",
        "utils.go",
    ],
    importpath = "github.com/bazelbuild/rules_k8s/k8s/go/pkg/resolver",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/google/go-containerregistry/pkg/authn",
        "//vendor/github.com/google/go-containerregistry/pkg/name",
        "//vendor/github.com/google/go-containerregistry/pkg/v1/layout",
        "//vendor/github.com/google/go-containerregistry/pkg/v1/remote",
        "//vendor/github.com/pkg/errors",
        "//vendor/gopkg.in/yaml.v2:yaml_v2",
    ],
)

go_test(
    name = "resolver_test",
    srcs = ["resolver_test.go"],
    embed = [":resolver"],
    deps = ["//vendor/github.com/google/go-cmp/cmp"],
)
